src/css/app.scss
:root {
    font-weight: 400;

    font-synthesis: none;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    -webkit-text-size-adjust: 100%;
    -webkit-tap-highlight-color: rgba(0,0,0,0);
    -webkit-tap-highlight-color: transparent;

    font-family: var(--md-sys-typescale-body-medium-font-family-name);

    --background-blur-value: 0px;

    --background: #190a00;
    --beige: rgb(255, 242, 224);
    --text: rgb(255, 239, 234);
    --dark-text: var(--background);
    --translucent-background: rgba(217, 217, 217, 0.15);
    --translucent-foreground: rgba(255, 242, 224, 0.75);
    --hover-transition: 1s cubic-bezier(0.77, 0, 0.175, 1);
}

.text-beige {color: var(--beige) !important}
.text-brown {color: var(--background) !important}
.beige {background-color: var(--beige) !important}
.background {background-color: var(--background) !important}
.translucent-background {background-color: var(--translucent-background) !important}

.translate-100 {
    translate: 0 100%;
}

html, body {
    margin: 0;
    padding: 0;
    height: 100%;
    width: 100%;
    background: var(--background);
    color: var(--text);
    // background: linear-gradient(126deg, #1a0b00 0%, rgb(21, 5, 0) 51%);
}
html {overflow-x: hidden}
html.lenis {height: auto; scroll-behavior: auto;}

.lenis.lenis-scrolling iframe {
    pointer-events: none;
}


::-webkit-scrollbar {width: 0;}
::-webkit-scrollbar-thumb {background-color: var(--md-sys-color-secondary); border-radius: 10px;}
::selection {background: var(--md-sys-color-primary); color: var(--md-sys-color-on-primary)}

.column-text-outer {overflow: hidden}
// .card {border-radius: 36px;}
.filler {flex: auto}

.column-text-in {
    translate: 0 100%;
    animation: column-text-in var(--md-sys-motion-duration-long4) 0.25s var(--md-sys-motion-easing-emphasized-decelerate) forwards;
}

.playfair {font-family: 'Playfair Display' !important;}
.raleway {font-family: 'Raleway' !important;}

.small-caps-text {
    text-transform: uppercase;
    font-weight: 800;
    font-size: 10px;
}


.global-card {
    background-color: var(--beige);
    max-width: 100%;
    display: flex;
    flex-flow: column nowrap;
    width: 100%;
    position: relative;
    transition: border-radius var(--hover-transition);
    text-decoration: none;
    border-radius: 250px 250px 4px 48px;
    color: var(--text);
    a {color: var(--dark-text); &:hover {text-decoration: underline;}}
    
    &.bottom-card {
        border-radius: 4px 4px 48px 4px;
        height: 225px;

        .text-wrapper {
            padding: 6px 0;
        }
        
        &:hover {
            border-radius: 4px 4px 48px 48px;
        }
    }
    &:not(.bottom-card) {
        flex: 1;
        .center-text-wrapper {
            position: absolute;
            top: 50%;
            left: 50%;
            translate: -50% -50%;
            width: 100%;
            display: flex;
            flex-flow: column;
            justify-content: center;
            align-items: center;
            .headline-small {
                position: static !important;
                translate: 0 0 !important;
            }
            .small-caps-text {
                text-transform: none;
            }
        }   
    }

    @media (max-width: 560px) {
        width: 90%;
        max-width: 90%;
    }

    .text-wrapper {
        color: var(--dark-text);
        display: flex;
        flex-flow: column nowrap;
        min-height: 180px;
        align-items: center;
        justify-content: space-between;
        box-sizing: border-box;
        padding-top: 18px;
        padding: 24px 0 6px 0;
        width: 100%;
        height: 100%;
        justify-content: space-between;
        .card-title {
            position: relative;
            display: flex;
            align-items: center;
            justify-content: center;
            width: 100%;
            .headline-small {
                font-family: 'Playfair Display';
                position: absolute;
                top: 50%;
                left: 50%;
                translate: -50% -50%;
                width: 90%;
                text-align: center;
                background: var(--beige);
                // padding: 6px 0;
                height: 32px;
                font-weight: 500;
                i {font-weight: 600}
                div {
                    transition: translate var(--hover-transition);
                    &:nth-child(2) {font-weight: 800}
                }
            }
            svg {scale: 0.97;}
        }
        .top-text, .bottom-text {
            text-transform: uppercase;
            font-weight: 800;
            font-size: 10px;
        }        
        .dots {
            position: absolute;
            bottom: 10px;
            right: 10px;
            display: flex;
            gap: 4px;
            .dot {
                height: 8px;
                width: 8px;
                border-radius: 50%;
                box-sizing: border-box;
                transition: translate var(--hover-transition);
                &:nth-child(1) {border: 1px solid var(--background)}
                &:nth-child(2) {background: var(--background)}
            }   
        }
    }

    .image-circle {
        width: 100%;
        flex-shrink: 0;
        position: relative;
        aspect-ratio: 1;
        scale: 1.095; // 1.1 was the estimated match
        // overflow: hidden;
        border-radius: 50%;
        img {
            width: 100%;
            height: 100%;
            object-fit: cover;
            box-sizing: border-box;
            border-radius: 50%;
            border: 15px solid var(--background);
            position: absolute;
            top: 0;
            left: 0;
            
            &:nth-child(2) {
                transition: var(--hover-transition);
                clip-path: circle(42.5% at 50% 50%);
            }
        }
        .glass {
            position: absolute;
            top: 50%;
            left: 50%;
            translate: -50% -50%;
            width: 50%;
            height: 50%;
            border-radius: 50%;
            background: var(--translucent-background);
            backdrop-filter: blur(25px);
            z-index: 10;
            display: flex;
            align-items: center;
            justify-content: center;
            box-shadow: 0px 2px 5px 4px rgba(0,0,0,0.1);
            transition: var(--hover-transition);
        }
    }
    
    .overlay-image {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        mix-blend-mode:multiply;
        z-index: 2;
        opacity: 0.05;
        pointer-events: none;
        img {
            width: 100%;
            height: 100%;
            object-fit: cover;
        }
    }

    @media (pointer: fine) {
        &:hover {
            border-radius: 250px 250px 48px 48px;
            .text-wrapper {
                .column-text-outer div {
                    translate: 0 -100%;
                }
            }
            .dots .dot:nth-child(1) {translate: 12px -12px;}
            .dots .dot:nth-child(2) {translate: -12px 0px;}
            .image-circle img:nth-child(2) {
                clip-path: circle(0% at 50% 50%);
                rotate: 10deg;
            }
        }
    }
    &:active {
        background: rgb(250, 239, 220);
        .text-wrapper .card-title .headline-small {
            background: rgb(250, 239, 220);
        }
    }
}

@keyframes fade-in {
    0% {opacity: 0}
    100% {opacity: 1}
}
@keyframes column-text-in {
    0% {translate: 0 100%}
    100% {translate: 0 0}
}
@keyframes fade-out {
    0% {opacity: 1}
    100% {opacity: 0}
}

.flex-center-container {
    display: flex;
    align-items: center;
    justify-content: center;
}
.flex-column {
    flex-flow: column;
}
.full-width {width: 100%;}
.full-height {height: 100%;}

.large-button {
    height: 48px;
    padding: 0 24px;
    border-radius: 48px;
    border: 1px solid var(--text);
    color: var(--text);
    display: flex;
    align-items: center;
    justify-content: center;
    text-decoration: none;
    font-family: 'Playfair Display';
    overflow: hidden;

    .background {
        position: absolute;
        bottom: 0;
        left: 0;
        width: 100%;
        height: 0;
    }
    &:hover {
        text-decoration: none !important;
    }

    &.inverse {
        border: 1px solid var(--background);
        color: var(--background);
    }
    &.filled {
        background: var(--background);
        color: var(--beige);
    }
    &.inverse-filled {
        background: var(--beige);
        color: var(--background);
    }
}

a {
    text-decoration: none;
    color: var(--text);
}

::view-transition-old(root),
::view-transition-new(root) {
    // animation-duration: 250ms;
    mix-blend-mode: normal;
    display: block;
}
::view-transition-group(*) {
    // animation-duration: 250ms;
    mix-blend-mode: normal;
    display: block;
}
::view-transition-group(artist-card) {
    z-index: 1;
    animation-duration: 500ms;
    // animation-timing-function: var(--md-sys-motion-easing-emphasized);
    animation-timing-function: linear(
        0, 0.002, 0.01 3.6%, 0.034, 0.074 9.1%, 0.128 11.4%, 0.194 13.4%, 0.271 15%,
        0.344 16.1%, 0.544, 0.66 20.6%, 0.717 22.4%, 0.765 24.6%, 0.808 27.3%,
        0.845 30.4%, 0.883 35.1%, 0.916 40.6%, 0.942 47.2%, 0.963 55%, 0.979 64%,
        0.991 74.4%, 0.998 86.4%, 1
      );
      
}
::view-transition-old(artist-card):only-child {
    animation: 150ms fade-out forwards;
}

